src/test/deca/context/invalid/resultats/test17_multiple_decl-cont.res
./src/test/deca/context/invalid/test17_multiple_decl.deca:16:5: Variable f was already defined
